Många ändringar, DrawPanel är nu endast för att Rita (V)